Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81517

Balsam crashes when generating normals

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15
    • 5.14.0
    • Quick: 3D
    • None
    • Linux/X11
    • a49043a265d5b685bf83499fd17cf2089baf71cb

    Description

      $ balsam --generateNormals  ~/Documents/Voxel/Johnny.dae 
      balsam: ../../../3rdparty/assimp/src/code/Importer.cpp:731: const aiScene* Assimp::Importer::ApplyPostProcessing(unsigned int): Assertion `_ValidateFlags(pFlags)' failed.
      Aborted (core dumped)
      

      Attachments

        1. Johnny_texture0.png
          Johnny_texture0.png
          0.2 kB
        2. Johnny.dae
          11 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jakangas Janne Kangas
            mchiasson Mathieu-Andre Chiasson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes