Check for non-compatible normal generation flags in balsam

Make sure that either generateNormals or generateSmoothNormals is set, not
both. (The second one defaults to true in JSON options, causing balsam
assert if command line defines --generateNormals.)

Task-id: QTBUG-81517
Change-Id: I4390db82e6bb9199b1974a7407823d9dc0228482
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>